main.css
* {
    padding: 0;
    margin: 0;
} 


body {
	margin: 15px; padding: 10px;
	background-color: black;
	font: 16px/230% "Tahoma" "Helvetica"  sans-serif;
	background: #66cc97; /* soft green with 60% white */

	
/* font-family: was serif for text; changed to Tahoma sans 28 May 2016
font-size: 16px;
line-height: 20px; 
Default line-height is approx 110-120%
So headings need to be about 200-220%
and body text needs to be about 150% for wider line-spacing

Font family sans for headings
font-family: 'Limelight', sans-serif;
font-family:"Britannic Bold" (not available);
font: 16px/125% "Helvetica" "Verdana" "Liberation Sans" sans-serif
Tried to include Brittanic Bold 28 May 2016

	font: 16px/130% "Tahoma" "Helvetica"  sans-serif;

	font-family: 'Playfair Display SC', serif;

	font-family: 'Forum', cursive;

	font-family: 'Alegreya SC', serif;

	font-family: 'Chonburi', cursive;

	font-family: 'Abril Fatface', cursive;
	
	font-family:"Britannic Bold";

*/


}

content {
	margin: 5px; padding: 5px;
	
}	

table {
	border-collapse: collapse;
	border: 1px solid;
}
td, th {
	border: 1px solid;
	padding: 2px;
}

h1,h2 {
	text-align: center;
	margin: 0; padding: 5px;
	font-family: 'Limelight', sans-serif;
	font: 20px/250% 
}

h3 {
	text-align: left;
	margin: 0; padding: 3px;
	font-family: 'Limelight', sans-serif;
	font: 18px/200% 
}

h4 {
	text-align: left;
	margin: 0; padding: 3px;
	font: 16px/125% 'Verdana' sans-serif;
}

/* Static Menu for desktop only */

#menu {
height: 40px;
line-height: 40px;
/* background: #0000FF;  deep blue from PWMU site */
/* background: #431a54;  purple as shadow of cross */
/* background: #18596B;  grey-green of welcome banner */
/* background: #D2141E;  Red for Christmas 2015 */ 
/* background: #700000;  /* Burgundy */
padding-bottom: 5px;
font-size: 1em;
border-bottom: navy solid medium; 

}
#menu ul {
padding-left: 24px;
list-style-type: none;
}
#menu ul li {
background: #ffff99; /* soft sand 80% white base colour all menus */
display: block;
float: left;
}
#menu ul li a {
padding: 0 10px;
text-decoration: none;
font-weight: 600;
}
#menu ul li a:hover {
color: #00FF00;
text-decoration: underline;
}
#menu ul li a:visited {
color: #FF00FF;
text-decoration: none;
}

#menu .current {
    font-size: 1em;
	background: #66cc97; /* soft green with 60% white: active page matches main background */
}

/* End static menu for desktop */

/* Link stuff

/* unvisited link */
a:link {
    /* color: #0005F7; */
	color: #0000EE;
}

/* visited link */
a:visited {
    /* color: #FF00FF; */
	color: #551A8B;
}

/* mouse over link */
a:hover {
    color: #00FF00;
}

/* selected link */
a:active {
	background: #66cc97; /* soft green with 60% white: active page merges to bg */
}

/* End of link stuff */
 


/* footer stuff for eventual W3C certification */

#footer {
text-align: center;
border-top: navy solid medium; 
width: 100%;
/* width: 960px; */
color: #666;
font-size: 1em; 
}
#footer  a { color: #000000; }
 
 
/* img { border: none; } */
img { 
    border: none; 
    width: 100%;
    height: auto;
    
}

a { color: #0F0FFF; }

